--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -10,14 +10,14 @@
   </ion-item>
 
   <ion-slides pager="true">
-    <ion-slide>
-      <img src="/assets/perro-1.jpg">
+    <ion-slide class="image-slide"
+                [style]="img1 | domSanitizer">
     </ion-slide>
-    <ion-slide>
-      <img src="/assets/perro-2.jpg">
+    <ion-slide class="image-slide"
+                [style]="img2 | domSanitizer">
     </ion-slide>
-    <ion-slide>
-      <img src="/assets/perro-3.jpg">
+    <ion-slide class="image-slide"
+                [style]="img3 | domSanitizer">
     </ion-slide>
   </ion-slides>
 
