agregado infinite Scroll simple

--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -30,7 +30,7 @@
   </ion-item>
 
   <ion-item>
-    <ion-label text-wrap>
+    <ion-label class="text-wrap">
       {{post.mensaje}}
     </ion-label>
   </ion-item>
