--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -16,6 +16,9 @@
   <!-- refresher -->
     <app-posts [posts]="posts"></app-posts>
 
-
+    <ion-infinite-scroll threshold="100px" (ionInfinite)="paginate($event)">
+      <ion-infinite-scroll-content>
+      </ion-infinite-scroll-content>
+    </ion-infinite-scroll>
   <!-- infinite scroll -->
 </ion-content>
